--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -366,7 +366,7 @@ jobs:
         libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 \
         libs/libdouble-conversion libs/qt6base libs/cxxopts libs/jpcre2 libs/alac libs/libcryptopp \
         utils/qt6tools utils/sms-tool utils/cpulimit utils/sendat utils/filebrowser utils/cups-bjnp \
-        utils/phicomm-k3screenctrl utils/joker utils/7z utils/pcat-manager utils/dhrystone utils/supervisor utils/tinymembench \
+        utils/phicomm-k3screenctrl utils/joker utils/7z utils/dhrystone utils/supervisor utils/tinymembench \
         multimedia/you-get multimedia/lux multimedia/gmediarender multimedia/ykdl multimedia/gallery-dl \
         sound/spotifyd devel/go-rice admin/gotop
         ) &
@@ -377,7 +377,7 @@ jobs:
         git_sparse_clone openwrt-24.10 "https://github.com/immortalwrt/immortalwrt" \
         package/kernel/rtl8189es package/emortal/autocore package/emortal/automount \
         package/network/utils/fullconenat package/emortal/cpufreq package/network/utils/fullconenat-nft \
-        package/utils/mhz
+        package/utils/mhz package/utils/pcat-manager
         ) &
         (
         git_sparse_clone master "https://github.com/x-wrt/com.x-wrt" luci-app-macvlan luci-app-xwan
