--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -108,6 +108,7 @@ jobs:
         git_clone https://github.com/kiddin9/qBittorrent
         git_clone https://github.com/kiddin9/openwrt-lingtigameacc && mvdir openwrt-lingtigameacc
         git_clone https://github.com/kiddin9/luci-app-timewol
+        git_clone https://github.com/kiddin9/luci-app-vsftpd
         ) &
         (
         git_clone https://github.com/xiaorouji/openwrt-passwall && mvdir openwrt-passwall
