--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -340,9 +340,8 @@ jobs:
         multimedia/UnblockNeteaseMusic multimedia/aliyundrive-webdav net/antileech net/gowebdav net/kismet net/mstpd \
         net/qBittorrent-static net/phtunnel net/headscale net/baidupcs-go net/daemonlogger net/geth net/gnurl \
         net/uugamebooster net/pgyvpn ‎net/ooniprobe net/polipo net/rosy-file-server \
-        net/rsyslog net/sqm-scripts-extra net/tor-fw-helper net/vncrepeater \
-        net/vpnbypass net/vpn-policy-routing utils/flent-tools \
-        utils/qfirehose utils/slirp4netns
+        net/sqm-scripts-extra net/tor-fw-helper net/vncrepeater \
+        net/vpnbypass net/vpn-policy-routing utils/qfirehose
         ) &
         (
         git_sparse_clone openwrt-24.10 "https://github.com/openwrt/packages" \
