--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -496,6 +496,7 @@ jobs:
           -e "s/\(\(^\| \|	\)\(PKG_HASH\|PKG_MD5SUM\|PKG_MIRROR_HASH\|HASH\):=\).*/\1skip/" \
           -e 's/php7/php8/g' \
           -e 's/+docker\( \|$\)/+docker +dockerd /g' \
+          -e 's/URL:=@IMMORTALWRT/URL:=https:\/\/sources-cdn.immortalwrt.org/g' \
           -e 's?include .*/luci.mk?include $(TOPDIR)/feeds/luci/luci.mk?' \
           */Makefile
 
