--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -353,7 +353,7 @@ jobs:
         git_sparse_clone master "https://github.com/coolsnowwolf/packages" multimedia/UnblockNeteaseMusic-Go \
         multimedia/UnblockNeteaseMusic multimedia/aliyundrive-webdav net/gowebdav net/kismet net/mstpd \
         net/qBittorrent-static net/phtunnel net/headscale net/baidupcs-go net/daemonlogger net/geth net/gnurl \
-        net/uugamebooster net/pgyvpn ‎net/ooniprobe net/polipo net/rosy-file-server \
+        net/uugamebooster net/pgyvpn net/ooniprobe net/polipo net/rosy-file-server \
         net/sqm-scripts-extra net/tor-fw-helper net/vncrepeater \
         net/vpnbypass net/vpn-policy-routing utils/qfirehose
         git_sparse_clone master "https://github.com/lunatickochiya/Matrix-Action-Openwrt" package/kochiya/brlaser package/kochiya/luci-app-banmac-ipt package/kochiya/luci-app-banmac-nft package/kochiya/luci-app-nvr package/kochiya/luci-app-openvpn-server
