--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -226,7 +226,7 @@ jobs:
         git_clone https://github.com/hzyitc/mnh-openwrt && mvdir mnh-openwrt
         ) &
         (
-        git clone https://github.com/sirpdboy/luci-theme-kucat -b js --depth 1
+        git_clone https://github.com/sirpdboy/luci-theme-kucat kucat && mvdir kucat
         git_clone https://github.com/QiuSimons/luci-app-daed-next daed1 && mvdir daed1
         git_clone https://github.com/sirpdboy/luci-app-chatgpt-web
         git_clone https://github.com/sirpdboy/luci-app-eqosplus
