--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -373,6 +373,7 @@ jobs:
         git_sparse_clone develop "https://github.com/Ysurac/openmptcprouter-feeds" \
         luci-app-packet-capture luci-app-iperf atinout
         git_sparse_clone chawrt/24.10 "https://github.com/liudf0716/luci" applications/luci-app-yt-dlp applications/luci-app-apfree-wifidog applications/luci-app-ss-redir
+        git_sparse_clone chawrt/24.10 "https://github.com/liudf0716/packages" net/ss-redir net/bpfilter
         ) &
         git_sparse_clone master "https://github.com/coolsnowwolf/luci" applications libs/luci-lib-fs
         mv -f applications luciapp
