--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -131,6 +131,7 @@ jobs:
         git_clone https://github.com/sirpdboy/netspeedtest && mvdir netspeedtest
         git_clone https://github.com/sirpdboy/luci-app-parentcontrol
         git_clone https://github.com/sirpdboy/luci-app-poweroffdevice poweroffdevice && mvdir poweroffdevice
+        git_clone https://github.com/sirpdboy/luci-app-watchdog watchdog && mvdir watchdog
         git_clone https://github.com/muink/openwrt-fastfetch
         # git_clone https://github.com/muink/luci-app-homeproxy
         ) &
