--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -341,7 +341,7 @@ jobs:
         net/dns-forwarder net/ipset-lists net/ShadowVPN net/nps net/verysync net/vlmcsd net/dnsforwarder net/tcpping \
         net/mentohust net/ps3netsrv net/brook net/q net/quectel-cm net/speedtest-cli net/tcping-simple \
         net/vsftpd net/smartdns net/miniupnpd net/p910nd net/ddns-scripts \
-        net/ariang net/tailscale net/frp libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 \
+        net/ariang net/tailscale libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 \
         libs/libdouble-conversion libs/qt6base libs/cxxopts libs/jpcre2 libs/alac libs/libcryptopp libs/antileech \
         utils/qt6tools utils/dockerd utils/cpulimit utils/sendat utils/filebrowser utils/cups-bjnp \
         utils/phicomm-k3screenctrl utils/joker utils/7z utils/dhrystone utils/supervisor utils/tinymembench \
