--- a/luci-app-watchdog/root/usr/share/luci/menu.d/luci-app-watchdog.json
+++ b/luci-app-watchdog/root/usr/share/luci/menu.d/luci-app-watchdog.json
@@ -1,4 +1,13 @@
 {
+	"admin/control": {
+		"title": "Control",
+		"order": 61,
+		"action": {
+			"type": "firstchild",
+			"recurse": true
+		}
+	},
+
 	"admin/control/watchdog": {
 		"title": "Watch Dog",
 		"order": 10,
