--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -317,7 +317,7 @@ jobs:
         git_clone https://github.com/mukaiu/luci-app-domain-proxy
         git_clone https://github.com/danielaskdd/luci-app-smartvpn
         git_clone https://github.com/hequan2017/luci-app-forcedata
-        git_clone https://github.com/sbwml/luci-app-openai opai && mvdir opai
+        git_clone https://github.com/sbwml/luci-app-openlist oplist && mvdir oplist
         git_clone https://github.com/AngelaCooljx/luci-theme-material3
         ) &
         (
