--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -163,7 +163,7 @@ jobs:
         git_clone https://github.com/linkease/istore && mv -n istore/luci/* ./; rm -rf istore
         git_clone https://github.com/linkease/lcdsimple lcdsimple1 && mvdir lcdsimple1
         git_clone https://github.com/fcshark-org/openwrt-fchomo && mvdir openwrt-fchomo
-        git_clone https://github.com/asvow/luci-app-tailscale
+        git_clone https://github.com/kiddin9/openwrt-tailscale
         ) &
         (
         git_clone https://github.com/frainzy1477/luci-app-clash
@@ -342,7 +342,7 @@ jobs:
         net/dns-forwarder net/ipset-lists net/ShadowVPN net/nps net/verysync net/vlmcsd net/dnsforwarder net/tcpping \
         net/mentohust net/ps3netsrv net/brook net/q net/quectel-cm net/speedtest-cli net/tcping-simple \
         net/vsftpd net/smartdns net/miniupnpd net/p910nd net/ddns-scripts \
-        net/ariang net/tailscale libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 \
+        net/ariang libs/wxbase libs/rapidjson libs/libcron libs/quickjspp libs/toml11 \
         libs/libdouble-conversion libs/qt6base libs/cxxopts libs/jpcre2 libs/alac libs/libcryptopp libs/antileech \
         utils/qt6tools utils/dockerd utils/cpulimit utils/sendat utils/filebrowser utils/cups-bjnp \
         utils/phicomm-k3screenctrl utils/joker utils/7z utils/dhrystone utils/supervisor utils/tinymembench \
