--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@
 /meig_QMI_WWAN
 /quectel-gobinet
 /quectel_Gobinet
-/quectel-qmi-wwanq
+/quectel-qmi-wwan
 /vsftpd-alt
 /luci-app-nginx-pingos
 /configs
